Configuração da Startup e UserSecrets

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_head.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_head.cshtml
@@ -11,7 +11,7 @@
         <meta name="keywords" content="" />
         <meta name="application-name" content="" />
         <!-- Import google fonts - Heading first/ text second -->
-        @*<link href='http://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700' rel='stylesheet' type='text/css'>*@
+        @*<link href='https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700' rel='stylesheet' type='text/css'>*@
 
         @* ======================================================== *@
 
