Atualizei a base de dados. Alterei o nome para AspNetCoreUdemy, Criei a Classe ApplicationUser com Apelido, NomeCompleto e DataNascimento e limpamos as listas e as ViewComponents

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Home/BoxInit.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Home/BoxInit.cshtml
@@ -6,6 +6,9 @@
 }
 
 
+<vc:cabecalho titulo="Box Init" subtitulo="Módulos do Sistema de Gestão Hospitalar">
+</vc:cabecalho>
+
 <main>
     <div class="wrapper">
         <div class="block">
