--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Dashboard.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Dashboard.cshtml
@@ -3,8 +3,8 @@
 }
 
 
-<vc:cabecalho-modulo titulo="Dashbord" subtitulo="Estatísticas e Marcadores do Sistema">
-</vc:cabecalho-modulo>
+<vc:cabecalho titulo="Dashbord" subtitulo="Estatísticas e Marcadores do Sistema">
+</vc:cabecalho>
 
 <partial name="PartialViews/_estado_paciente" />
 
