--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Sobre.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Sobre.cshtml
@@ -4,9 +4,9 @@
 }
 
 
-    <vc:cabecalho titulo="Medical Management-Sys / Sobre Nós" subtitulo="Módulo de Administração de Pacientes">
 
-    </vc:cabecalho><vc:cabecalho titulo="Medical Management-Sys / Módulo Pacientes" subtitulo="Módulo de Administração de Pacientes">
+
+<vc:cabecalho titulo="Medical Management-Sys / Módulo Pacientes" subtitulo="Módulo de Administração de Pacientes">
 
 </vc:cabecalho>
 
