--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,11 +1,11 @@
-﻿@{ 
+﻿@{
     Layout = "/Areas/Identity/Pages/_Layout.cshtml";
 }
 
-<h2>Manage your account</h2>
+<h2>Gerenciamento de Conta</h2>
 
 <div>
-    <h4>Change your account settings</h4>
+    <h4>Gerencie suas configurações de conta</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
