Extesão do Identity e Implementação do IEmailSender, via SendGrid.

--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/_ViewImports.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/_ViewImports.cshtml
@@ -1,1 +1,6 @@
 ﻿@using Cooperchip.ITDeveloper.Mvc.Areas.Identity.Pages.Account.Manage
+@using Cooperchip.ITDeveloper.Mvc.Extensions.Identity;
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, Cooperchip.ITDeveloper.Mvc"
+@addTagHelper "*, Cooperchip.ITDeveloper.Mvc.Areas.Identity.Pages.Account.Manage"
