--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,9 +1,16 @@
 ﻿@page
 @model IndexModel
+
+    @*<div class="row col-md-12">
+        <vc:cabecalho titulo="Medical Management - Sys" subtitulo="Módulo Identity - Confirmação de Conta"></vc:cabecalho>
+
+    </div>*@
+
 @{
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
+
 
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
@@ -31,6 +38,26 @@
                 }
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Input.Apelido"></label>
+                <input asp-for="Input.Apelido" class="form-control" />
+                <span asp-validation-for="Input.Apelido" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Input.NomeCompleto"></label>
+                <input asp-for="Input.NomeCompleto" class="form-control" />
+                <span asp-validation-for="Input.NomeCompleto" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Input.DataNascimento"></label>
+                <input asp-for="Input.DataNascimento" class="form-control" />
+                <span asp-validation-for="Input.DataNascimento" class="text-danger"></span>
+            </div>
+
+
             <div class="form-group">
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
