--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+    //Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+    Layout = "/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Gerenciamento de Conta</h2>
