--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Register.cshtml
@@ -60,6 +60,41 @@
                     <div class="col-lg-12">
                         <div class="input-group input-icon">
                             <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                            <input asp-for="Input.Apelido" class="form-control" placeholder="Informe o apelido..." />
+                            <span asp-validation-for="Input.Apelido" class="text-danger"></span>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-12">
+                        <div class="input-group input-icon">
+                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                            <input asp-for="Input.NomeCompleto" class="form-control" placeholder="Informe o nome..." />
+                            <span asp-validation-for="Input.NomeCompleto" class="text-danger"></span>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-12">
+                        <div class="input-group input-icon">
+                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                            <input asp-for="Input.DataNascimento" class="form-control" placeholder="Data de nascimento..." />
+                            <span asp-validation-for="Input.DataNascimento" class="text-danger"></span>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="form-group">
+                    <div class="col-lg-12">
+                        <div class="input-group input-icon">
+                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
                             <input asp-for="Input.Email" class="form-control" placeholder="Informe o email..." />
                             <span asp-validation-for="Input.Email" class="text-danger"></span>
 
