--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Cooperchip.ITDeveloper.Mvc.Areas.Identity
+@using Cooperchip.ITDeveloper.Mvc.Extensions.Identity
 @namespace Cooperchip.ITDeveloper.Mvc.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
