--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Register.cshtml
@@ -59,7 +59,7 @@
                 <div class="form-group">
                     <div class="col-lg-12">
                         <div class="input-group input-icon">
-                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-user"></i></span>
                             <input asp-for="Input.Apelido" class="form-control" placeholder="Informe o apelido..." />
                             <span asp-validation-for="Input.Apelido" class="text-danger"></span>
 
@@ -70,7 +70,7 @@
                 <div class="form-group">
                     <div class="col-lg-12">
                         <div class="input-group input-icon">
-                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-users"></i></span>
                             <input asp-for="Input.NomeCompleto" class="form-control" placeholder="Informe o nome..." />
                             <span asp-validation-for="Input.NomeCompleto" class="text-danger"></span>
 
@@ -81,7 +81,7 @@
                 <div class="form-group">
                     <div class="col-lg-12">
                         <div class="input-group input-icon">
-                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-calendar-times-o"></i></span>
                             <input asp-for="Input.DataNascimento" class="form-control" placeholder="Data de nascimento..." />
                             <span asp-validation-for="Input.DataNascimento" class="text-danger"></span>
 
