Acerto de Links e https

--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Login.cshtml
@@ -28,18 +28,17 @@
 
     <!-- Css files -->
     <!-- Icons -->
-    <link href="~/bundle/core.min.css" rel="stylesheet" />
+    <link href="/bundle/core.min.css" rel="stylesheet" />
 
     @* ======================================================== *@
 
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="~/img/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/img/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/img/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="~/img/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/img/ico/apple-touch-icon-57-precomposed.png">
     <link rel="icon" href="/img/ico/favicon.ico" type="image/png">
-    <!-- Windows8 touch icon ( http://www.buildmypinnedsite.com/ )-->
     <meta name="msapplication-TileColor" content="#3399cc" />
 </head>
 
@@ -163,11 +162,11 @@
     <!-- Important javascript libs(put in all pages) -->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script>
-        window.jQuery || document.write('<script src="/assets/js/libs/jquery-2.1.1.min.js">\x3C/script>')
+        window.jQuery || document.write('<script src="/js/libs/jquery-2.1.1.min.js">\x3C/script>')
     </script>
     <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script>
-        window.jQuery || document.write('<script src="/assets/js/libs/jquery-ui-1.10.4.min.js">\x3C/script>')
+        window.jQuery || document.write('<script src="/js/libs/jquery-ui-1.10.4.min.js">\x3C/script>')
     </script>
     <!--[if lt IE 9]>
       <script type="text/javascript" src="/js/libs/excanvas.min.js"></script>
