--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Register.cshtml
@@ -19,24 +19,23 @@
     <meta name="keywords" content="" />
     <meta name="application-name" content="" />
     <!-- Import google fonts - Heading first/ text second -->
-    @*<link href='http://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700' rel='stylesheet' type='text/css'>*@
+    @*<link href='https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,700' rel='stylesheet' type='text/css'>*@
 
     @* ======================================================== *@
 
     <!-- Css files -->
     <!-- Icons -->
-    <link href="~/bundle/core.min.css" rel="stylesheet" />
+    <link href="/bundle/core.min.css" rel="stylesheet" />
 
     @* ======================================================== *@
 
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="~/img/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/img/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/img/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="~/img/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="icon" href="~/img/ico/favicon.ico" type="image/png">
-    <!-- Windows8 touch icon ( http://www.buildmypinnedsite.com/ )-->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/img/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="icon" href="/img/ico/favicon.ico" type="image/png">
     <meta name="msapplication-TileColor" content="#3399cc" />
 </head>
 
@@ -47,7 +46,7 @@
         <!-- Start .panel -->
         <div class="panel-heading">
             <h4 class="panel-title text-center">
-                <img id="logo" src="~/img/logo-dark.png" alt="EAD ITDeveloper">
+                <img id="logo" src="/img/logo-dark.png" alt="EAD ITDeveloper">
             </h4>
         </div>
         <div class="panel-body">
@@ -162,25 +161,28 @@
 </div>
 <!-- Javascripts -->
 <!-- Important javascript libs(put in all pages) -->
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script>
-    window.jQuery || document.write('<script src="~/assets/js/libs/jquery-2.1.1.min.js">\x3C/script>')
+    window.jQuery || document.write('<script src="/js/libs/jquery-2.1.1.min.js">\x3C/script>')
 </script>
-<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 <script>
-    window.jQuery || document.write('<script src="~/assets/js/libs/jquery-ui-1.10.4.min.js">\x3C/script>')
+    window.jQuery || document.write('<script src="/js/libs/jquery-ui-1.10.4.min.js">\x3C/script>')
 </script>
 <!--[if lt IE 9]>
-    <script type="text/javascript" src="~/js/libs/excanvas.min.js"></script>
-    <script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <script type="text/javascript" src="~/js/libs/respond.min.js"></script>
+    <script type="text/javascript" src="/js/libs/excanvas.min.js"></script>
+    <script type="text/javascript" src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script type="text/javascript" src="/js/libs/respond.min.js"></script>
 <![endif]-->
 <!-- Bootstrap plugins -->
-<script src="~/js/bootstrap/bootstrap.js"></script>
+
+<script src="/js/bootstrap/bootstrap.js"></script>
 <!-- Form plugins -->
-<script src="~/plugins/forms/validation/jquery.validate.js"></script>
-<script src="~/plugins/forms/validation/additional-methods.min.js"></script>
+<script src="/plugins/forms/validation/jquery.validate.js"></script>
+<script src="/plugins/forms/validation/additional-methods.min.js"></script>
+
 <!-- Init plugins olny for this page -->
 <script src="~/js/pages/login.js"></script>
+
 </body>
 </html>
