Config de IdentityOptions, Cookies e Confirmação de Email via Login.

--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Login.cshtml
@@ -65,6 +65,10 @@
                                 <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
                                 <input asp-for="Input.Email" class="form-control" placeholder="Digite seu email..." />
                                 <span asp-validation-for="Input.Email" class="text-danger"></span>
+                                
+                                @* Todo: Insert Carlos ConfirmarEmailLogin *@
+                                <a asp-page="./ConfirmarEmailLogin" class="btn btn-link">Enviar confirmação de Email</a>
+
                             </div>
                         </div>
                     </div>
