Middlewares - Como usar e como extender o IApplicationBuilder

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_lis_do_menu_left.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_lis_do_menu_left.cshtml
@@ -10,6 +10,10 @@
 </li>
 
 <li>
+    <a asp-controller="Home" asp-action="Contato"><i class="l-basic-mail"></i><span class="txt">Fale Conosco</span></a>
+</li>
+
+<li>
     <a href="#"><i class="l-ecommerce-graph1"></i> <span class="txt">Demo - Rotas</span></a>
     <ul class="sub">
         <li>
@@ -33,7 +37,6 @@
 <li>
     <a asp-controller="EstadoPaciente" asp-action="Index"><i class="l-basic-accelerator"></i><span class="txt">Estado Pacientes</span></a>
 </li>
-
 
 
 <li>
