Add GenericoController and Views of the Generic

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_lis_do_menu_left.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_lis_do_menu_left.cshtml
@@ -38,6 +38,9 @@
     <a asp-controller="EstadoPaciente" asp-action="Index"><i class="l-basic-accelerator"></i><span class="txt">Estado Pacientes</span></a>
 </li>
 
+<li>
+    <a asp-controller="Generico" asp-action="Index"><i class="l-basic-accelerator"></i><span class="txt">Lista Genérico</span></a>
+</li>
 
 <li>
     <a asp-controller="LoggerSample" asp-action="Index"><i class="l-basic-notebook-pencil"></i><span class="txt">Auditoria</span></a>
