--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Generico/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Generico/Index.cshtml
@@ -1,35 +1,97 @@
-﻿@model IEnumerable<Cooperchip.ITDeveloper.Domain.Models.Generico>
+﻿
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Codigo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Codigo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+@model IEnumerable<Cooperchip.ITDeveloper.Domain.Models.Generico>
+<!-- Start .row -->
+<div class="row" style="margin-top: 12px;">
+
+
+
+    <div class="col-lg-12">
+
+        <p>
+            <button class="btn btn-default create" data-toggle="tooltip" data-placement="bottom" title="Adicionar um novo tipo de genérico" data-original-title="Adicionar um novo genérico">  <i class="glyphicon glyphicon-plus-sign"></i>  </button>
+
+            <a asp-controller="Home" asp-action="Index" class="btn btn-default">Home</a>
+
+        </p>
+
+        <div class="animated fadeInRightBig">
+            <div class="panel panel-primary toggle">
+                <!-- Start .panel -->
+                <div class="panel-heading">
+                    <h4 class="panel-title"><i class="fa fa-magic"></i> MedicalManagement-Sys - Cadastro de Genéricos</h4>
+                </div>
+                <div class="panel-body">
+                    <table id="myTable" class="table table-striped table-bordered table-hover" style="width:100%" cellspacing="0" width="100%">
+
+
+
+                        <thead>
+                            <tr>
+                                <th>Código</th>
+                                <th>Descrição</th>
+                                <th class="text-center">Ação</th>
+
+                            </tr>
+                        </thead>
+
+
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+
+
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Codigo)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Nome)
+                                    </td>
+
+                                    <td class="text-center">
+
+                                        <button class="btn btn-default details" data-id="@item.Id" data-toggle="tooltip" data-placement="bottom" title="Detalhes de Genérico" data-original-title="Detalhes de Genérico"><i class="glyphicon glyphicon-file"></i></button>
+
+                                        <button class="btn btn-danger delete" data-id="@item.Id" data-toggle="tooltip" data-placement="bottom" title="Excluir Genérico" data-original-title="Excluir Genérico"><i class="glyphicon glyphicon-trash"></i></button>
+
+                                        <button class="btn btn-primary edit" data-id="@item.Id" data-toggle="tooltip" data-placement="bottom" title="Editar Genérico" data-original-title="Editar Genérico"><i class="glyphicon glyphicon-edit"></i></button>
+
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+
+                        <tfoot>
+                            <tr>
+                                <th>Código</th>
+                                <th>Descrição</th>
+                                <th class="text-center">Ação</th>
+                            </tr>
+                        </tfoot>
+
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+@section Scripts {
+
+
+
+
 }
-    </tbody>
-</table>
+
+
+
+
+
+
