Primeira versão de importação e listagem de Cid ok com o uso do Bloco de Notas, também sobreescrevi o bundleconfig.json e libman.json do artigo do medium para o projeto.

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_lis_do_menu_left.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_lis_do_menu_left.cshtml
@@ -30,21 +30,34 @@
 </li>
 
 
+
+
 <li>
-    <a asp-controller="Paciente" asp-action="Index"><i class="l-basic-chronometer"></i><span class="txt">Pacientes</span></a>
+    <a href="#"><i class="l-ecommerce-graph3"></i><span class="tex">Cadastro</span> </a>
+    <ul class="sub">
+        <li>
+            <a asp-controller="Paciente" asp-action="Index"><i class="l-basic-chronometer"></i><span class="txt">Pacientes</span></a>
+        </li>
+
+        <li>
+            <a asp-controller="EstadoPaciente" asp-action="Index"><i class="l-basic-accelerator"></i><span class="txt">Estado Pacientes</span></a>
+        </li>
+
+        <li>
+            <a asp-controller="Generico" asp-action="Index"><i class="l-basic-accelerator"></i><span class="txt">Lista Genérico</span></a>
+        </li>
+
+        <li>
+            <a asp-controller="Cid" asp-action="Index"><i class="l-basic-heart"></i><span class="txt">Lista Cid</span></a>
+        </li>
+
+    </ul>
 </li>
 
 <li>
-    <a asp-controller="EstadoPaciente" asp-action="Index"><i class="l-basic-accelerator"></i><span class="txt">Estado Pacientes</span></a>
+    <a asp-controller="Config" asp-action="MenuConfig"><i class="l-basic-todo-pencil"></i><span class="txt">Config</span></a>
 </li>
 
-<li>
-    <a asp-controller="Config" asp-action="Index"><i class="l-basic-todo-pencil"></i><span class="txt">Config</span></a>
-</li>
-
-<li>
-    <a asp-controller="Generico" asp-action="Index"><i class="l-basic-accelerator"></i><span class="txt">Lista Genérico</span></a>
-</li>
 
 <li>
     <a asp-controller="LoggerSample" asp-action="Index"><i class="l-basic-notebook-pencil"></i><span class="txt">Auditoria</span></a>
