Encoding.GetEncoding(1252) e Provider na Startup ok. Também troquei o conteúdo do wwwroot inteiro.

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Cid/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Cid/Index.cshtml
@@ -95,7 +95,7 @@
 
 @section Scripts {
 
-
+    @*<script src="~/bundle/dashboard.min.js"></script>*@
     <script src="~/bundle/dataTables.min.js"></script>
 
     <script type="text/javascript">
