--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Generico/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Generico/Index.cshtml
@@ -92,6 +92,7 @@
 
 
     <script src="~/bundle/dataTables.min.js"></script>
+    <script src="~/bundle/dashboard.min.js"></script>
 
 
     <script type="text/javascript">
