Substituí o _script.cshtml, que tinha esquecido!

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_scripts.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_scripts.cshtml
@@ -36,8 +36,8 @@
 
 <script src="/Scripts/Others/moment.min.js"></script>
 
-<script src="/Scripts/Others/fullcalendar.js"></script>
-<script src="/Scripts/Others/gcal.js"></script>
+@*<script src="/Scripts/Others/fullcalendar.js"></script>*@
+@*<script src="/Scripts/Others/gcal.js"></script>*@
 
 <script src="/Scripts/Others/toastr.js"></script>
 
