Demostrativo das páginas de códigos nativa do .Net Core + Provider para suporte ao ANSI em startup e depois ExtensionMethod de IServiceCollection para manter o padrão. ANSI-to-UTF8 em RunTime ok

--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_lis_do_menu_left.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_lis_do_menu_left.cshtml
@@ -58,6 +58,10 @@
     <a asp-controller="Config" asp-action="MenuConfig"><i class="l-basic-todo-pencil"></i><span class="txt">Config</span></a>
 </li>
 
+<li>
+    <a asp-controller="CodePage" asp-action="Index"><i class="l-basic-todo-pencil"></i><span class="txt">Code Page</span></a>
+</li>
+
 
 <li>
     <a asp-controller="LoggerSample" asp-action="Index"><i class="l-basic-notebook-pencil"></i><span class="txt">Auditoria</span></a>
