--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Config/ImportarCid.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Config/ImportarCid.cshtml
@@ -13,19 +13,24 @@
                 </div>
                 <div class="panel-body">
 
-                    <form asp-controller="Cid" asp-action="ImportCid"
-                          name="ImportCid" method="post"
-                          enctype="multipart/form-data">
-
-                        <input type="file" name="file" /> <hr />
-
-                        <input type="submit" name="submit" id="submitCid" value="Carregar..." class="btn btn-info" />
-
+                    <form asp-controller="Cid" asp-action="ImportCid" name="ImportCid" method="post" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <div class="custon-file">
+                                <input type="file" name="file" class="custom-file" id="csvupload" />
+                                <label data-browse="Procurar" style="width:400px" class="custom-file-label" for="csvupload"></label>
+                                <label style="display:none" id="imd_none"></label>
+                            </div>
+                            <input type="submit" name="submit" id="submitCid" value="Carregar..." class="btn btn-info" />
+                        </div>
                     </form>
-
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+@section Scripts {
+
+    <script src="~/bundle/dashboard.min.js"></script>
+}
 
