--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Contato.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Home/Contato.cshtml
@@ -17,7 +17,7 @@
                 <div asp-validation-summary="All" class="text-danger"></div>
 
 
-                <partial name="_contato"/>
+                <partial name="_contato" />
 
 
                 <div class="form-group">
@@ -29,3 +29,7 @@
         </div>
     </div>
 </div>
+
+@section Scripts{
+    <script src="~/bundle/dashboard.min.js"></script>
+}
