--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_rightsidebar.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_rightsidebar.cshtml
@@ -7,96 +7,18 @@
             <div class="tabs">
                 <!-- Start .rs tabs -->
                 <ul id="rstab" class="nav nav-tabs nav-justified">
+                    
                     <li class="active">
-                        <a href="#activity" data-toggle="tab"><i class="glyphicon glyphicon-bullhorn"></i> </a>
-                    </li>
-                    <li>
                         <a href="#users" data-toggle="tab"><i class="fa fa-comments"></i> </a>
                     </li>
+
+                    <li>
+                        <a href="#activity" data-toggle="tab"><i class="glyphicon glyphicon-bullhorn"></i> </a>
+                    </li>
+
                 </ul>
                 <div id="rstab-content" class="tab-content">
-                    <div class="tab-pane fade active in" id="activity">
-                        <ul class="timeline timeline-icons timeline-sm">
-                            <li>
-                                <p>
-                                    <a href="#">Jonh Doe</a> attached new <a href="#">file</a>
-                                    <span class="timeline-icon"><i class="fa fa-file-text-o"></i></span>
-                                    <span class="timeline-date">Dec 10, 22:00</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <a href="#">Admin</a> approved <a href="#">3 new comments</a>
-                                    <span class="timeline-icon"><i class="fa fa-comment"></i></span>
-                                    <span class="timeline-date">Dec 8, 13:35</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <a href="#">Jonh Smith</a> deposit 300$
-                                    <span class="timeline-icon"><i class="fa fa-money color-green"></i></span>
-                                    <span class="timeline-date">Dec 6, 10:17</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <a href="#">Serena Williams</a> purchase <a href="#">3 items</a>
-                                    <span class="timeline-icon"><i class="fa fa-shopping-cart color-red"></i></span>
-                                    <span class="timeline-date">Dec 5, 04:36</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <a href="#">1 support </a> request is received from <a href="#">Klaudia Chambers</a>
-                                    <span class="timeline-icon"><i class="fa fa-life-ring color-gray-light"></i></span>
-                                    <span class="timeline-date">Dec 4, 18:40</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    You received 136 new likes for <a href="#">your page</a>
-                                    <span class="timeline-icon"><i class="glyphicon glyphicon-thumbs-up"></i></span>
-                                    <span class="timeline-date">Dec 4, 12:00</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <a href="#">12 settings </a> are changed from <a href="#">Master Admin</a>
-                                    <span class="timeline-icon"><i class="glyphicon glyphicon-cog"></i></span>
-                                    <span class="timeline-date">Dec 3, 23:17</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <a href="#">Klaudia Chambers</a> change your photo
-                                    <span class="timeline-icon"><i class="l-basic-photo"></i></span>
-                                    <span class="timeline-date">Dec 2, 05:17</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <a href="#">Master server </a> is down for 10 min.
-                                    <span class="timeline-icon"><i class="l-basic-server2"></i></span>
-                                    <span class="timeline-date">Dec 2, 04:56</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <a href="#">12 links </a> are broken
-                                    <span class="timeline-icon"><i class="fa fa-unlink"></i></span>
-                                    <span class="timeline-date">Dec 1, 22:13</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <a href="#">Last backup </a> is restored by <a href="#">Master admin</a>
-                                    <span class="timeline-icon"><i class="fa fa-undo color-red"></i></span>
-                                    <span class="timeline-date">Dec 1, 17:42</span>
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="tab-pane fade" id="users">
+                    <div class="tab-pane fade active in" id="users">
                         <div class="chat-user-list">
                             <form class="form-vertical chat-search" role="form">
                                 <div class="form-group">
@@ -309,6 +231,87 @@
                                 </form>
                             </div>
                         </div>
+                    </div>
+                    <div class="tab-pane fade" id="activity">
+                        <ul class="timeline timeline-icons timeline-sm">
+                            <li>
+                                <p>
+                                    <a href="#">Jonh Doe</a> attached new <a href="#">file</a>
+                                    <span class="timeline-icon"><i class="fa fa-file-text-o"></i></span>
+                                    <span class="timeline-date">Dec 10, 22:00</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <a href="#">Admin</a> approved <a href="#">3 new comments</a>
+                                    <span class="timeline-icon"><i class="fa fa-comment"></i></span>
+                                    <span class="timeline-date">Dec 8, 13:35</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <a href="#">Jonh Smith</a> deposit 300$
+                                    <span class="timeline-icon"><i class="fa fa-money color-green"></i></span>
+                                    <span class="timeline-date">Dec 6, 10:17</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <a href="#">Serena Williams</a> purchase <a href="#">3 items</a>
+                                    <span class="timeline-icon"><i class="fa fa-shopping-cart color-red"></i></span>
+                                    <span class="timeline-date">Dec 5, 04:36</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <a href="#">1 support </a> request is received from <a href="#">Klaudia Chambers</a>
+                                    <span class="timeline-icon"><i class="fa fa-life-ring color-gray-light"></i></span>
+                                    <span class="timeline-date">Dec 4, 18:40</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    You received 136 new likes for <a href="#">your page</a>
+                                    <span class="timeline-icon"><i class="glyphicon glyphicon-thumbs-up"></i></span>
+                                    <span class="timeline-date">Dec 4, 12:00</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <a href="#">12 settings </a> are changed from <a href="#">Master Admin</a>
+                                    <span class="timeline-icon"><i class="glyphicon glyphicon-cog"></i></span>
+                                    <span class="timeline-date">Dec 3, 23:17</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <a href="#">Klaudia Chambers</a> change your photo
+                                    <span class="timeline-icon"><i class="l-basic-photo"></i></span>
+                                    <span class="timeline-date">Dec 2, 05:17</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <a href="#">Master server </a> is down for 10 min.
+                                    <span class="timeline-icon"><i class="l-basic-server2"></i></span>
+                                    <span class="timeline-date">Dec 2, 04:56</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <a href="#">12 links </a> are broken
+                                    <span class="timeline-icon"><i class="fa fa-unlink"></i></span>
+                                    <span class="timeline-date">Dec 1, 22:13</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <a href="#">Last backup </a> is restored by <a href="#">Master admin</a>
+                                    <span class="timeline-icon"><i class="fa fa-undo color-red"></i></span>
+                                    <span class="timeline-date">Dec 1, 17:42</span>
+                                </p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
