--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/_LoginPartial.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/_LoginPartial.cshtml
@@ -4,10 +4,13 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
+    <form asp-area="Identity" asp-page="/Account/Logout" 
+          asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" 
+          id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" 
+                   title="Manage">Olá, @UserManager.GetUserName(User)!</a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
