--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,11 +1,6 @@
 ﻿@page
 @model IndexModel
 
-    @*<div class="row col-md-12">
-        <vc:cabecalho titulo="Medical Management - Sys" subtitulo="Módulo Identity - Confirmação de Conta"></vc:cabecalho>
-
-    </div>*@
-
 @{
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
@@ -18,6 +13,18 @@
     <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
+
+            <label>Imagem de Perfil:</label><br />
+            @if (!string.IsNullOrEmpty(Model.Input.ImgProfilePath))
+            {
+                <img src="/uploads/@Model.Input.ImgProfilePath" alt="Imagem de Perfil" class="img-thumbnail" />
+            }
+            else
+            {
+                <img src="/img/avatars/foto-padrao.jpg" alt="Imagem de Perfil"  />
+            }
+            <br />
+
             <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
@@ -70,4 +77,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/bundle/dashboard.min.js"></script>
 }
