--- a/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Areas/Identity/Pages/Account/Register.cshtml
@@ -40,149 +40,160 @@
 </head>
 
 <body class="login-page">
-<!-- Start login container -->
-<div class="container login-container">
-    <div class="login-panel panel panel-default plain animated bounceIn">
-        <!-- Start .panel -->
-        <div class="panel-heading">
-            <h4 class="panel-title text-center">
-                <img id="logo" src="/img/logo-dark.png" alt="EAD ITDeveloper">
-            </h4>
-        </div>
-        <div class="panel-body">
-
-
-            <form asp-route-returnUrl="@Model.ReturnUrl" id="register-form" class="form-horizontal mt0" method="post">
-                <div asp-validation-summary="All" class="text-danger"></div>
-
-                <div class="form-group">
-                    <div class="col-lg-12">
-                        <div class="input-group input-icon">
-                            <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                            <input asp-for="Input.Apelido" class="form-control" placeholder="Informe o apelido..." />
-                            <span asp-validation-for="Input.Apelido" class="text-danger"></span>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-lg-12">
-                        <div class="input-group input-icon">
-                            <span class="input-group-addon"><i class="fa fa-users"></i></span>
-                            <input asp-for="Input.NomeCompleto" class="form-control" placeholder="Informe o nome..." />
-                            <span asp-validation-for="Input.NomeCompleto" class="text-danger"></span>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-lg-12">
-                        <div class="input-group input-icon">
-                            <span class="input-group-addon"><i class="fa fa-calendar-times-o"></i></span>
-                            <input asp-for="Input.DataNascimento" class="form-control" placeholder="Data de nascimento..." />
-                            <span asp-validation-for="Input.DataNascimento" class="text-danger"></span>
-
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="form-group">
-                    <div class="col-lg-12">
-                        <div class="input-group input-icon">
-                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                            <input asp-for="Input.Email" class="form-control" placeholder="Informe o email..." />
-                            <span asp-validation-for="Input.Email" class="text-danger"></span>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-lg-12">
-                        <div class="input-group input-icon">
-                            <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                            <input asp-for="Input.Password" type="password" class="form-control" placeholder="Digite sua senha">
-                            <span asp-validation-for="Input.Password" class="text-danger"></span>
-
-                        </div>
-                        <div class="input-group input-icon">
-                            <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                            <input asp-for="Input.ConfirmPassword" type="password" class="form-control" placeholder="Repita sua senha">
-                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group mb0">
-                    <div class="col-md-12">
-                        <button class="btn btn-default" type="submit">Registre-se</button>
-                    </div>
-                </div>
-            </form>
-
-            <div class="seperator">
-                <strong>ou</strong>
-                <hr>
-            </div>
-            <div class="social-buttons text-center mt5 mb5">
-                <a href="#" class="btn btn-primary btn-alt mr10">Entrar com <i class="fa fa-facebook s20 ml5 mr0"></i></a>
-                <a href="#" class="btn btn-danger btn-alt ml10">Entrar com <i class="fa fa-google-plus s20 ml5 mr0"></i></a>
-            </div>
-            <div class="seperator">
-                <strong>ou</strong>
-                <hr>
-            </div>
-            <div class="panel-footer gray-lighter-bg bt">
-                <h4 class="text-center">
-                    <strong>Se já possui uma conta:</strong>
+    <!-- Start login container -->
+    <div class="container login-container">
+        <div class="login-panel panel panel-default plain animated bounceIn">
+            <!-- Start .panel -->
+            <div class="panel-heading">
+                <h4 class="panel-title text-center">
+                    <img id="logo" src="/img/logo-dark.png" alt="EAD ITDeveloper">
                 </h4>
-                <p class="text-center">
-                    <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl" class="btn btn-primary">Faça Login</a>
-
-                </p>
             </div>
+            <div class="panel-body">
 
+
+                <form asp-route-returnUrl="@Model.ReturnUrl" id="register-form" class="form-horizontal mt0" method="post" enctype="multipart/form-data">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+
+                    <div class="form-group">
+                        <div class="col-lg-12">
+                            <div class="input-group input-icon">
+                                <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                                <input asp-for="Input.Apelido" class="form-control" placeholder="Informe o apelido..." />
+                                <span asp-validation-for="Input.Apelido" class="text-danger"></span>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-lg-12">
+                            <div class="input-group input-icon">
+                                <span class="input-group-addon"><i class="fa fa-users"></i></span>
+                                <input asp-for="Input.NomeCompleto" class="form-control" placeholder="Informe o nome..." />
+                                <span asp-validation-for="Input.NomeCompleto" class="text-danger"></span>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-lg-12">
+                            <div class="input-group input-icon">
+                                <span class="input-group-addon"><i class="fa fa-calendar-times-o"></i></span>
+                                <input asp-for="Input.DataNascimento" class="form-control" placeholder="Data de nascimento..." />
+                                <span asp-validation-for="Input.DataNascimento" class="text-danger"></span>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <div class="col-lg-12">
+                            <div class="input-group input-icon">
+                                <span class="input-group-addon"><i class="fa fa-users"></i></span>
+                                <input type="file" name="file" class="form-control" placeholder="Selecione uma foto..." />
+                                <span asp-validation-for="Input.ImgProfilePath" class="text-danger"></span>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <div class="col-lg-12">
+                            <div class="input-group input-icon">
+                                <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                                <input asp-for="Input.Email" class="form-control" placeholder="Informe o email..." />
+                                <span asp-validation-for="Input.Email" class="text-danger"></span>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-12">
+                            <div class="input-group input-icon">
+                                <span class="input-group-addon"><i class="fa fa-key"></i></span>
+                                <input asp-for="Input.Password" type="password" class="form-control" placeholder="Digite sua senha">
+                                <span asp-validation-for="Input.Password" class="text-danger"></span>
+
+                            </div>
+                            <div class="input-group input-icon">
+                                <span class="input-group-addon"><i class="fa fa-key"></i></span>
+                                <input asp-for="Input.ConfirmPassword" type="password" class="form-control" placeholder="Repita sua senha">
+                                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mb0">
+                        <div class="col-md-12">
+                            <button class="btn btn-default" type="submit">Registre-se</button>
+                        </div>
+                    </div>
+                </form>
+
+                <div class="seperator">
+                    <strong>ou</strong>
+                    <hr>
+                </div>
+                <div class="social-buttons text-center mt5 mb5">
+                    <a href="#" class="btn btn-primary btn-alt mr10">Entrar com <i class="fa fa-facebook s20 ml5 mr0"></i></a>
+                    <a href="#" class="btn btn-danger btn-alt ml10">Entrar com <i class="fa fa-google-plus s20 ml5 mr0"></i></a>
+                </div>
+                <div class="seperator">
+                    <strong>ou</strong>
+                    <hr>
+                </div>
+                <div class="panel-footer gray-lighter-bg bt">
+                    <h4 class="text-center">
+                        <strong>Se já possui uma conta:</strong>
+                    </h4>
+                    <p class="text-center">
+                        <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl" class="btn btn-primary">Faça Login</a>
+
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <!-- End .panel -->
+    </div>
+    <!-- End login container -->
+
+
+
+
+    <div class="container">
+        <div class="footer">
+            <p class="text-center">&copy; 2007 / @DateTime.Now.Year - Cooperchip. Todos os direitos reservados!</p>
         </div>
     </div>
-    <!-- End .panel -->
-</div>
-<!-- End login container -->
+    <!-- Javascripts -->
+    <!-- Important javascript libs(put in all pages) -->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script>
+        window.jQuery || document.write('<script src="/js/libs/jquery-2.1.1.min.js">\x3C/script>')
+    </script>
+    <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <script>
+        window.jQuery || document.write('<script src="/js/libs/jquery-ui-1.10.4.min.js">\x3C/script>')
+    </script>
+    <!--[if lt IE 9]>
+        <script type="text/javascript" src="/js/libs/excanvas.min.js"></script>
+        <script type="text/javascript" src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <script type="text/javascript" src="/js/libs/respond.min.js"></script>
+    <![endif]-->
+    <!-- Bootstrap plugins -->
 
+    <script src="/js/bootstrap/bootstrap.js"></script>
+    <!-- Form plugins -->
+    <script src="/plugins/forms/validation/jquery.validate.js"></script>
+    <script src="/plugins/forms/validation/additional-methods.min.js"></script>
 
-
-
-<div class="container">
-    <div class="footer">
-        <p class="text-center">&copy; 2007 / @DateTime.Now.Year - Cooperchip. Todos os direitos reservados!</p>
-    </div>
-</div>
-<!-- Javascripts -->
-<!-- Important javascript libs(put in all pages) -->
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script>
-    window.jQuery || document.write('<script src="/js/libs/jquery-2.1.1.min.js">\x3C/script>')
-</script>
-<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-<script>
-    window.jQuery || document.write('<script src="/js/libs/jquery-ui-1.10.4.min.js">\x3C/script>')
-</script>
-<!--[if lt IE 9]>
-    <script type="text/javascript" src="/js/libs/excanvas.min.js"></script>
-    <script type="text/javascript" src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <script type="text/javascript" src="/js/libs/respond.min.js"></script>
-<![endif]-->
-<!-- Bootstrap plugins -->
-
-<script src="/js/bootstrap/bootstrap.js"></script>
-<!-- Form plugins -->
-<script src="/plugins/forms/validation/jquery.validate.js"></script>
-<script src="/plugins/forms/validation/additional-methods.min.js"></script>
-
-<!-- Init plugins olny for this page -->
-<script src="~/js/pages/login.js"></script>
+    <!-- Init plugins olny for this page -->
+    <script src="~/js/pages/login.js"></script>
 
 </body>
 </html>
