--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/_Layout.cshtml
@@ -114,7 +114,7 @@
         <div class="page-content sidebar-page right-sidebar-page clearfix">
             <div class="page-content-wrapper">
                 <div class="page-content-inner">
-
+                    @* Todo: AcertConcent *@
                     @RenderBody()
 
                 </div>
