--- a/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_profile_left_sidebar.cshtml
+++ b/src/Cooperchip.ITDeveloper.Mvc/Views/Shared/PartialViews/_profile_left_sidebar.cshtml
@@ -6,7 +6,8 @@
 
 
 <div class="user-info clearfix">
-    <img src="/img/avatars/128.jpg" alt="avatar">
+    <img src="/img/avatars/foto-padrao.jpg" alt="avatar" style="clear: both; float: left; margin-right: 10px; border: 2px solid #eeeeee; width: 50px; height: 50px; border-radius: 50%; ">
+
     <span class="name">SuggeElson</span>
     <div class="btn-group">
         <button type="button" class="btn btn-default btn-xs">
